[gd_scene load_steps=3 format=3 uid="uid://ceb3oeu71v6e1"]

[ext_resource type="Script" path="res://story/hit_dice_selection_button_group.gd" id="2_nci2h"]
[ext_resource type="PackedScene" uid="uid://cfnlwcs3oai0c" path="res://story/hit_die_selection_button.tscn" id="3_6gpjh"]

[node name="HitDiceSelectionButtonGroup" type="VBoxContainer"]
offset_right = 44.0
offset_bottom = 145.0
size_flags_horizontal = 3
script = ExtResource("2_nci2h")
_hit_die_selection_button = ExtResource("3_6gpjh")

[node name="Buttons" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="AllButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "All"

[connection signal="toggled" from="AllButton" to="." method="select_all_available_buttons"]
